@@ -30,6 +30,7 @@
     <property name="javac.include.runtime" value="no"/>
     <property name="javac.source" value="1.3"/>
 		<property name="javadoc.link" value="http://java.sun.com/j2se/1.3/docs/api/"/>
+    <property name="main.class" value="net.sourceforge.jsxe.jsXe"/>
 		<property name="major.version" value="0"/>
 		<property name="minor.version" value="3"/>
 		<property name="build.description" value="pre4"/>
@@ -108,13 +109,26 @@
 				<include name="**/*.png"/>
 			</fileset>
 		</copy>
-		<propertyfile comment="${app.name}&apos;s build properties" file="${build.dest}/net/sourceforge/jsxe/build.properties">
+		
+    <!-- set the build properties -->
+    <propertyfile comment="${app.name}&apos;s build properties" file="${build.dest}/net/sourceforge/jsxe/build.properties">
 			<entry key="application.name" value="${app.name}"/>
 			<entry key="build.time" pattern="dd/MM/yyyy HH:mm" type="date" value="now"/>
 			<entry key="major.version" value="${major.version}"/>
 			<entry key="minor.version" value="${minor.version}"/>
 			<entry key="build.description" value="${build.description}"/>
 		</propertyfile>
+    
+    <!-- create jar manifest -->
+    <manifest file="${app.name}.manifest">
+      <attribute name="Built-By" value="${user.name}"/>
+      <attribute name="Main-Class" value="${main.class}"/>
+      <section name="common">
+        <attribute name="Implementation-Title" value="${app.name}"/>
+        <attribute name="Implementation-Version" value="${app.version} ${TODAY}"/>
+      </section>
+    </manifest>
+    
 		<jar jarfile="${app.name}.jar" manifest="${app.name}.manifest">
 			<fileset dir="${build.dest}">
 				<include name="**/*.class"/>
@@ -160,7 +174,12 @@
 	<!-- }}} -->
 	<!-- {{{ ============ Generates the binary distribution ================ -->
 	<target depends="compile, prepare-build, doc" name="bin" description="Build binary distribution">
-		<!-- doc -->
+		
+    <!-- compile default views -->
+    <ant inheritAll="false" dir="../treeview/" target="compile"/>
+    <copy file="../treeview/treeview.jar" tofile="${distbin.dir}/plugins/treeview.jar"/>
+    
+    <!-- doc -->
 		<mkdir dir="${distbin.dir}/doc"/>
 		<copy todir="${distbin.dir}/doc">
 			<fileset dir="${build.docs}">
@@ -232,6 +251,7 @@
 		<delete dir="${build.dir}"/>
 		<delete>
 			<fileset dir="." includes="${app.name}.jar"/>
+      <fileset dir="." includes="${app.name}.manifest"/>
 			<fileset dir="." includes="**/*.class"/>
 			<fileset defaultexcludes="no" dir="." includes="**/*~"/>
 			<fileset defaultexcludes="no" dir="." includes="**/#*#"/>
