@@ -1,1 +1,0 @@
-Main-Class: net.sourceforge.jsxe.jsXe
